# mettle

./: CMakeLists.txt  COPYING  README.md  default.supp  design.txt
cmake/modules/: FindCSFML.cmake
data/: CMakeLists.txt
data/img/: CMakeLists.txt
src/: CMakeLists.txt  mettle.c  mettle.h
